<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2024-2025 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/dynamic_bar_title">

    <com.android.settings.custom.preference.SecureSettingSwitchPreference
        android:key="ax_dynamic_bar_enabled"
        android:title="@string/dynamic_bar_enable_title"
        android:summary="@string/dynamic_bar_enable_summary"
        app:defaultValue="false" />

    <com.android.settings.custom.preference.SecureSettingSwitchPreference
        android:key="ax_dynamic_bar_keyguard_enabled"
        android:title="@string/dynamic_bar_keyguard_title"
        android:summary="@string/dynamic_bar_keyguard_summary"
        app:defaultValue="true"
        android:dependency="ax_dynamic_bar_enabled" />

    <com.android.settings.custom.preference.SecureSettingListPreference
        android:key="ax_dynamic_bar_keyguard_battery_chip_mode"
        android:title="@string/dynamic_bar_keyguard_battery_chip_title"
        android:entries="@array/dynamic_bar_keyguard_battery_chip_entries"
        android:entryValues="@array/dynamic_bar_keyguard_battery_chip_values"
        app:defaultValue="1"
        android:dependency="ax_dynamic_bar_keyguard_enabled" />

    <PreferenceCategory
        android:key="dynamic_bar_events_category"
        android:title="@string/dynamic_bar_events_title"
        android:dependency="ax_dynamic_bar_enabled">

        <SwitchPreferenceCompat
            android:key="event_audio_recording"
            android:icon="@drawable/ic_mic"
            android:title="@string/dynamic_bar_event_audio_recording"
            android:summary="@string/dynamic_bar_event_audio_recording_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_call"
            android:icon="@drawable/ic_phone"
            android:title="@string/dynamic_bar_event_call"
            android:summary="@string/dynamic_bar_event_call_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_media"
            android:icon="@drawable/ic_music_note"
            android:title="@string/dynamic_bar_event_media"
            android:summary="@string/dynamic_bar_event_media_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_notification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/dynamic_bar_event_notification"
            android:summary="@string/dynamic_bar_event_notification_summary"
            android:defaultValue="true" />

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="ax_dynamic_bar_compact_notifications"
            android:icon="@drawable/ic_compact_notifications"
            android:title="@string/dynamic_bar_compact_notifications_title"
            android:summary="@string/dynamic_bar_compact_notifications_summary"
            app:defaultValue="true"
            android:dependency="event_notification" />

        <SwitchPreferenceCompat
            android:key="event_timer"
            android:icon="@drawable/ic_timer"
            android:title="@string/dynamic_bar_event_timer"
            android:summary="@string/dynamic_bar_event_timer_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_stopwatch"
            android:icon="@drawable/ic_timer"
            android:title="@string/dynamic_bar_event_stopwatch"
            android:summary="@string/dynamic_bar_event_stopwatch_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_alarm"
            android:icon="@drawable/ic_alarm"
            android:title="@string/dynamic_bar_event_alarm"
            android:summary="@string/dynamic_bar_event_alarm_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_charging"
            android:icon="@drawable/ic_battery_charging_full"
            android:title="@string/dynamic_bar_event_charging"
            android:summary="@string/dynamic_bar_event_charging_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_bluetooth"
            android:icon="@drawable/ic_bluetooth"
            android:title="@string/dynamic_bar_event_bluetooth"
            android:summary="@string/dynamic_bar_event_bluetooth_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_hotspot"
            android:icon="@drawable/ic_hotspot"
            android:title="@string/dynamic_bar_event_hotspot"
            android:summary="@string/dynamic_bar_event_hotspot_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_ringer"
            android:icon="@drawable/ic_vibration"
            android:title="@string/dynamic_bar_event_ringer"
            android:summary="@string/dynamic_bar_event_ringer_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_vpn"
            android:icon="@drawable/ic_vpn_key"
            android:title="@string/dynamic_bar_event_vpn"
            android:summary="@string/dynamic_bar_event_vpn_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_clipboard"
            android:icon="@drawable/ic_clipboard"
            android:title="@string/dynamic_bar_event_clipboard"
            android:summary="@string/dynamic_bar_event_clipboard_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_torch"
            android:icon="@drawable/ic_flashlight_on"
            android:title="@string/dynamic_bar_event_torch"
            android:summary="@string/dynamic_bar_event_torch_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_promoted_ongoing"
            android:icon="@drawable/ic_promoted_ongoing"
            android:title="@string/dynamic_bar_event_promoted_ongoing"
            android:summary="@string/dynamic_bar_event_promoted_ongoing_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_sports"
            android:icon="@drawable/ic_sports"
            android:title="@string/dynamic_bar_event_sports"
            android:summary="@string/dynamic_bar_event_sports_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_app_switch"
            android:icon="@drawable/ic_swap_horiz"
            android:title="@string/dynamic_bar_event_app_switch"
            android:summary="@string/dynamic_bar_event_app_switch_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="event_biometric_unlock"
            android:icon="@drawable/ic_fingerprint"
            android:title="@string/dynamic_bar_event_biometric_unlock"
            android:summary="@string/dynamic_bar_event_biometric_unlock_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dynamic_bar_footer_category"
        android:title="@string/dynamic_bar_about_title">

        <Preference
            android:key="dynamic_bar_footer"
            android:summary="@string/dynamic_bar_about_summary"
            android:selectable="false" />

    </PreferenceCategory>

</PreferenceScreen>