<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2024 LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/spoofing_title">

    <!-- Play Integrity Fix -->
    <Preference
        android:key="play_integrity_fix"
        android:icon="@drawable/ic_fingerprint"
        android:title="@string/play_integrity_fix_title"
        android:summary="@string/play_integrity_fix_summary"
        android:fragment="org.lineageos.lineageparts.spoofing.PlayIntegrityFix" />

    <!-- TrickyStore -->
    <Preference
        android:key="tricky_store"
        android:icon="@drawable/ic_vpn_key"
        android:title="@string/tricky_store_title"
        android:summary="@string/tricky_store_summary"
        android:fragment="org.lineageos.lineageparts.spoofing.TrickyStore" />

    <!-- Game Spoofing -->
    <Preference
        android:key="game_spoofing"
        android:icon="@drawable/ic_swap_horiz"
        android:title="@string/game_spoofing_title"
        android:summary="@string/game_spoofing_summary"
        android:fragment="org.lineageos.lineageparts.spoofing.GameSpoofing" />

</PreferenceScreen>
